--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://adityabhosale5.github.io/ParadiseNursery",
+  "homepage": "https://adityabhosale5.github.io/ParadiceNursery",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
